@@ -14,7 +14,9 @@
 #include <sys/types.h> //for off_t and others.
 
 /**
- holds information about a file.
+ Holds information about a file.
+ Keeping this small is probably beneficial for performance, because the
+ large vector of all found files will be better cached.
  */
 class Fileinfo
 {
@@ -24,6 +26,7 @@ public:
     : m_filename(std::move(name))
     , m_delete(false)
     , m_duptype(DUPTYPE_UNKNOWN)
+    , m_info()
     , m_cmdline_index(cmdline_index)
     , m_depth(depth)
     , m_identity(0)
@@ -31,17 +34,9 @@ public:
     m_somebytes.fill('\0');
   }
 
-  // to store info about the file
-  using filesizetype = off_t; // defined in sys/types.h
-  struct Fileinfostat
-  {
-    filesizetype stat_size; // size
-    unsigned long stat_ino; // inode
-    unsigned long stat_dev; // device
-    bool is_file;
-    bool is_directory;
-    Fileinfostat();
-  };
+  /// for storing file size in bytes, defined in sys/types.h
+  using filesizetype = off_t;
+
   // enums used to tell how to read data into the buffer
   enum class readtobuffermode
   {
@@ -61,9 +56,28 @@ public:
     DUPTYPE_WITHIN_SAME_TREE,
     DUPTYPE_OUTSIDE_TREE
   };
+
+  /**
+   * gets a string with duptype
+   * @param A
+   * @return
+   */
+  static const char* getduptypestring(const Fileinfo& A);
   void setduptype(enum duptype duptype_) { m_duptype = duptype_; }
 
 private:
+  // to store info about the file
+  struct Fileinfostat
+  {
+    filesizetype stat_size; // size
+    unsigned long stat_ino; // inode
+    unsigned long stat_dev; // device
+    bool is_file;
+    bool is_directory;
+    Fileinfostat();
+  };
+  Fileinfostat m_info;
+
   // to keep the name of the file, including path
   std::string m_filename;
 
@@ -71,8 +85,6 @@ private:
   bool m_delete;
 
   duptype m_duptype;
-
-  struct Fileinfostat m_info;
 
   // If two files are found to be identical, the one with highest ranking is
   // chosen. The rules are listed in the man page.
@@ -116,19 +128,17 @@ public:
 
   int getduptype() const { return m_duptype; };
 
-  static std::string getduptypestring(const Fileinfo& A);
-
-  // makes a symlink of "this" that points to A.
+  /// makes a symlink of "this" that points to A.
   int makesymlink(const Fileinfo& A);
 
-  // makes a hardlink of "this" that points to A.
+  /// makes a hardlink of "this" that points to A.
   int makehardlink(const Fileinfo& A);
 
-  // deletes the file
+  /**
+   * deletes the file from the file system
+   * @return zero on success
+   */
   int deletefile();
-
-  // deletes file A, that is a duplicate of B
-  static int static_deletefile(Fileinfo& A, const Fileinfo& B);
 
   // makes a symlink of A that points to B
   static int static_makesymlink(Fileinfo& A, const Fileinfo& B);
@@ -136,28 +146,25 @@ public:
   // makes a hard link of A that points to B
   static int static_makehardlink(Fileinfo& A, const Fileinfo& B);
 
+  // deletes file A, that is a duplicate of B
+  static int static_deletefile(Fileinfo& A, const Fileinfo& B);
+
   // sets the deleteflag
   void setdeleteflag(bool flag) { m_delete = flag; }
 
-  // to get the deleteflag
+  /// to get the deleteflag
   bool deleteflag() const { return m_delete; }
 
-  static bool static_deleteflag(const Fileinfo& A) { return A.deleteflag(); }
-
-  // returns the size
+  /// returns the file size in bytes
   filesizetype size() const { return m_info.stat_size; }
 
   // returns true if A has size zero
-  static bool isempty(const Fileinfo& A) { return A.size() == 0; }
-  /**
-   * returns true if file A is smaller than minsize
-   * @param A
-   * @param minsize
-   * @return
-   */
-  static bool is_smaller_than(const Fileinfo& A, Fileinfo::filesizetype minsize)
+  bool isempty() const { return size() == 0; }
+
+  /// filesize comparison
+  bool is_smaller_than(Fileinfo::filesizetype minsize) const
   {
-    return A.size() < minsize;
+    return size() < minsize;
   }
 
   // returns the inode number
@@ -175,95 +182,23 @@ public:
   // gets the depth
   int depth() const { return m_depth; }
 
-  // returns true if a is smaller than b.
-  static bool compareonsize(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.size() < b.size();
-  }
+  /**
+   * fills with bytes from the file. if lasttype is supplied,
+   * it is used to see if the file needs to be read again - useful if the file
+   * is shorter than the length of the bytes field.
+   * @param filltype
+   * @param lasttype
+   * @return zero on success
+   */
+  int fillwithbytes(enum readtobuffermode filltype,
+                    enum readtobuffermode lasttype);
 
-  // returns true if a has lower inode than b
-  static bool compareoninode(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.inode() < b.inode();
-  }
-
-  // returns true if a has lower device than b
-  static bool compareondevice(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.device() < b.device();
-  }
-
-  // returns true if a has lower command line index than b
-  static bool compareoncmdlineindex(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.get_cmdline_index() < b.get_cmdline_index();
-  }
-
-  // returns true if a has lower identity number than b)
-  static bool compareonidentity(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.getidentity() < b.getidentity();
-  }
-
-  // returns true if a has lower depth than b)
-  static bool compareondepth(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.depth() < b.depth();
-  }
-
-  // fills with bytes from the file. if lasttype is supplied,
-  // it is used to see if the file needs to be read again - useful if
-  // file is shorter than the length of the bytes field.
-  int fillwithbytes(
-    enum readtobuffermode filltype,
-    enum readtobuffermode lasttype = readtobuffermode::NOT_DEFINED);
-
-  // get a pointer to the bytes read from the file
+  /// get a pointer to the bytes read from the file
   const char* getbyteptr() const { return m_somebytes.data(); }
+
   std::size_t getbuffersize() const { return m_somebytes.size(); }
 
-  static bool compareonbytes(const Fileinfo& a, const Fileinfo& b);
-
-  // compare on size first, then bytes. (useful for sorting)
-  static bool compareonsizeandfirstbytes(const Fileinfo& a, const Fileinfo& b);
-
-  // returns true if first bytes are equal. use "fillwithbytes" first!
-  static bool equalbytes(const Fileinfo& a, const Fileinfo& b);
-
-  // returns true if sizes are qual
-  static bool equalsize(const Fileinfo& a, const Fileinfo& b);
-
-  // returns true is inodes are equal
-  static bool equalinode(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.inode() == b.inode();
-  }
-
-  // returns true if devices are equal
-  static bool equaldevice(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.device() == b.device();
-  }
-
-  // returns true is command line indices are equal
-  static bool equalcmdlineindex(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.get_cmdline_index() == b.get_cmdline_index();
-  }
-
-  // returns true if identities are equal
-  static bool equalidentity(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.getidentity() == b.getidentity();
-  }
-
-  // returns true if detphs are equal
-  static bool equaldepth(const Fileinfo& a, const Fileinfo& b)
-  {
-    return a.depth() == b.depth();
-  }
-
-  // returns true if file is a regular file. call readfileinfo first!
+  /// returns true if file is a regular file. call readfileinfo first!
   bool isRegularFile() const { return m_info.is_file; }
 
   // returns true if file is a directory . call readfileinfo first!
