@@ -15,6 +15,8 @@
 	* performance: pruning empty files earlier and other improvements.
 	  "rdfind -checksum sha1 /usr /usr" goes from 5.9 to 4.86 seconds on the
 	  author's machine, with hot filesystem cache.
+	* increase size of integer types to be able to handle more than INTMAX
+	  files.
 2017-01-04 Paul Dreik <rdfind@pauldreik.se>
 	* release 1.3.5
 	* source cleanup like removing obsolete comments, formatting.
